# sabseg-FastAPI

./: Spacefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  register.py  requirements.txt
alembic/versions/: 5b576715c03b_add_equipment_model.py  d8bad4d0117d_add_user_model.py
app/: alembic.ini  main.py  register.py
app/alembic/: env.py
app/alembic/versions/: 43f378a6bcec_add_reservation_model.py  5b576715c03b_add_equipment_model.py  c51377796f6a_add_roles_models.py  d8bad4d0117d_add_user_model.py  f1ad93dbe0df_add_room_model.py
app/app/modules/users/: register.py
app/core/: data.py  security.py
app/core/auth/: register.py
app/core/auth/models/: roles.py
app/core/auth/providers/: auth.py
app/core/auth/routes/: auth.py
app/core/auth/schemas/: login.py
app/core/db/: base.py  register.py  session.py
app/core/db/default_data/: import_bulk_default_data.py
app/core/helpers/: extended_enums.py
app/core/models/: default_data_version.py
app/modules/equipments/: register.py
app/modules/equipments/models/: equipment.py  equipment_category.py
app/modules/equipments/providers/: equipment.py  equipment_category.py
app/modules/equipments/routes/: equipment.py  equipment_category.py
app/modules/equipments/schemas/: available_equipments.py  equipment.py
app/modules/reservations/: register.py
app/modules/reservations/models/: reservation.py  (+2 more)
app/modules/rooms/: register.py
app/modules/users/: register.py
modules/users/: register.py
modules/users/routes/: users.py
sabseg/: Open Notebook.onetoc2  postgres pgadmin on Docker.one
(+26 files in other folders)
